authors      : [ "Richard W.M. Jones" "Xavier R. Guérin" ]
bug-reports  : "https://github.com/xguerin/ppx_bitstring/issues"
dev-repo     : "https://github.com/xguerin/bitstring.git"
doc          : ["http://et.redhat.com/~rjones/bitstring/html/Bitstring.html"]
homepage     : "https://github.com/xguerin/bitstring"
license      : "LGPLv2+ with exceptions and GPLv2+"
maintainer   : "Xavier R. Guérin <ghub@applepine.org>"
opam-version : "1.2"
version      : "3.0.0"

build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
]

build-test: [
  ["jbuilder" "runtest" "-p" name "-j" jobs]
]

depends: [
  "jbuilder"                { build              }
  "ppx_tools_versioned"     { build              }
  "ocaml-migrate-parsetree" { build & >= "1.0.5" }
]

available: ocaml-version >= "4.02.0"
