authors      : [ "Richard W.M. Jones" "Xavier R. Guérin" ]
bug-reports  : "https://bitbucket.org/thanatonauts/bitstring/issues"
dev-repo     : "https://bitbucket.org/thanatonauts/bitstring.git"
doc          : "https://bitstring.software"
homepage     : "https://bitstring.software"
license      : "LGPLv2+ with exceptions and GPLv2+"
maintainer   : "Xavier R. Guérin <ghub@applepine.org>"
opam-version : "1.2"
version      : "3.1.1"

build: [
  ["dune" "build" "-p" name "-j" jobs]
]

build-test: [
  ["dune" "runtest" "-p" name "-j" jobs]
]

depends: [
  "dune"                    { build & >= "1.0"   }
  "ppx_tools_versioned"     { build              }
  "ocaml-migrate-parsetree" { build & >= "1.0.5" }
  "ounit"                   { test               }
]

conflicts: [
  "ppx_bitstring"
]

available: ocaml-version >= "4.02.3"
