(executable
 (name elf)
 (modules Elf)
 (libraries bitstring unix)
 (preprocess
  (pps bitstring.ppx)))

(executable
 (name ext3_superblock)
 (modules Ext3_superblock)
 (libraries bitstring unix)
 (preprocess
  (pps bitstring.ppx)))

(executable
 (name gif)
 (modules Gif)
 (libraries bitstring unix)
 (preprocess
  (pps bitstring.ppx)))

(executable
 (name ipv4_header)
 (modules Ipv4_header)
 (libraries bitstring unix)
 (preprocess
  (pps bitstring.ppx)))

(executable
 (name libpcap)
 (modules Libpcap)
 (libraries bitstring unix)
 (preprocess
  (pps bitstring.ppx)))

(executable
 (name make_ipv4_header)
 (modules Make_ipv4_header)
 (libraries bitstring unix)
 (preprocess
  (pps bitstring.ppx)))

(executable
 (name ping)
 (modules Ping)
 (libraries bitstring unix)
 (preprocess
  (pps bitstring.ppx)))
