(executable
 (name elf)
 (modules Elf)
 (libraries bitstring unix)
 (preprocess
  (pps ppx_bitstring)))

(executable
 (name ext3_superblock)
 (modules Ext3_superblock)
 (libraries bitstring unix)
 (preprocess
  (pps ppx_bitstring)))

(executable
 (name gif)
 (modules Gif)
 (libraries bitstring unix)
 (preprocess
  (pps ppx_bitstring)))

(executable
 (name ipv4_header)
 (modules Ipv4_header)
 (libraries bitstring unix)
 (preprocess
  (pps ppx_bitstring)))

(executable
 (name libpcap)
 (modules Libpcap)
 (libraries bitstring unix)
 (preprocess
  (pps ppx_bitstring)))

(executable
 (name make_ipv4_header)
 (modules Make_ipv4_header)
 (libraries bitstring unix)
 (preprocess
  (pps ppx_bitstring)))

(executable
 (name ping)
 (modules Ping)
 (libraries bitstring unix)
 (preprocess
  (pps ppx_bitstring)))
